--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -215,7 +215,9 @@ body {
   top: 105%;
 }
 
-
+.hopsworks-newsfeed > h3 {
+  font-weight: bold;
+}
 
 .hopsworks-newsfeed > p {
   font-size: 16px;
@@ -223,7 +225,6 @@ body {
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-
 
   /* Remove the padding we set earlier */
   .header,
