--- a/app/views/main.html
+++ b/app/views/main.html
@@ -62,18 +62,13 @@
   <div class="row">
     <div class="col-md-7 hopsworks-newsfeed">
       <h3>Discover interesting datasets</h3>
-      <p>
-        You can use the search or goto public datasets to discover what people are sharing.
-      </p>
-
+      <p>You can use the search or <a>goto public datasets</a> to discover what people are sharing.</p>
       <h3>Discover interesting projects</h3>
-      <p>
-        You can also search for projects and send the owner a request to join thier project.
-      </p>
-
+      <p>You can also search for projects and send the owner a request to join thier project.</p>
       <h3>Explore hopsworks</h3>
-      <p>Explore hopsworks by taking one of our tours.</p>
-
+      <p>Explore hopsworks by taking one of our <a>tours.</a></p>
+      <h3>Need help</h3>
+      <p>If you need help or want to report a bug goto <a>click here.</a></p>
     </div>
 
     <div class="col-md-5">
@@ -103,11 +98,11 @@
           </ul>
         </div>
         <div class="panel-body">
-          <i style="font-size: 20px;" class="fa fa-unlock fa-2 pull-left"></i>
+          <i style="font-size: 20px;" class="fa fa-unlock-alt pull-left" title="My own project"></i>
           Project1
         </div>
         <div class="panel-body">
-          <i style="font-size: 20px;" class="fa fa-lock fa-2 pull-left"></i>
+          <i style="font-size: 20px;" class="fa fa-lock pull-left" title="Project I am a member of"></i>
           Project2
         </div>
         <div class="panel-footer clearfix">
