--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -187,19 +187,24 @@ body {
   position: static;
   padding: 0 20px;
 }
-.carousel-caption h1,
+.carousel-caption h2,
 .carousel-caption .lead {
   margin: 0;
   line-height: 1.25;
   color: #fff;
   text-shadow: 0 1px 1px rgba(0,0,0,.4);
 }
+
+.carousel-caption h2 {
+  font-weight: bold;
+}
+
 .btn-carousel {
   margin-top: 10px;
 }
 .carousel-control {
   margin-top: 0;
-  font-size: 110px;
+  font-size: 80px;
   text-shadow: 0 1px 1px rgba(0,0,0,.4);
   background-color: transparent;
   border: 0;
@@ -215,7 +220,7 @@ body {
   top: 105%;
 }
 
-.hopsworks-newsfeed > h3 {
+.hopsworks-newsfeed > h4 {
   font-weight: bold;
 }
 
