--- a/app/views/main.html
+++ b/app/views/main.html
@@ -37,7 +37,7 @@
               <div class="carousel-caption">
                 <h2>Public Datasets.</h2>
                 <p class="lead">Dela is a peer to peer dataset sharing app.</p>
-                <a class="btn btn-large btn-warning btn-carousel" href="#">Explore</a>
+                <a class="btn btn-large btn-warning btn-carousel" href="#!/publicDataset">Explore</a>
               </div>
             </div>
           </div>
@@ -56,7 +56,7 @@
   <div class="row">
     <div class="col-md-7 hopsworks-newsfeed">
       <h4>Discover interesting datasets</h4>
-      <p>You can use the search or <a>goto public datasets</a> to discover what people are sharing.</p>
+      <p>You can use the search or <a href="#!/publicDataset">goto public datasets</a> to discover what people are sharing.</p>
       <h4>Discover interesting projects</h4>
       <p>You can also search for projects and send the owner a request to join thier project.</p>
       <h4>Explore hopsworks</h4>
