--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div ng-init="jumbotronClose = false">
   <div class="jumbotron" ng-show="jumbotronClose == false">
     <div class="jumbotron-close">
-      <a ng-click="jumbotronClose = true" title="click to minimize"><span>x</span> Dismiss</a>
+      <a ng-click="jumbotronClose = true" title="click to minimize"><span>&times;</span> Dismiss</a>
     </div>
     <div id="myCarousel" class="carousel slide">
         <div class="carousel-inner">
