--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,1 +1,44 @@
-<p>This is the search view.</p>
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand">0 result(s) for: search term</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li id="search-nav" class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <span class="glyphicon glyphicon-filter" aria-hidden="true"></span>Filter  <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<div class="search-body">
+  <div class="pull-right">
+    <span class="text-muted"><b>1</b>–<b>50</b> of <b>160</b></span>
+    <div class="btn-group btn-group-sm">
+      <button type="button" class="btn btn-default">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+      </button>
+      <button type="button" class="btn btn-default">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+      </button>
+    </div>
+  </div>
+  <br>
+  <div class="divider"></div>
+</div>
