--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,8 +10,6 @@ body {
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
 .footer {
   padding-left: 15px;
   padding-right: 15px;
@@ -32,11 +30,12 @@ body {
 
 .nav-pills > .active > a {
   text-decoration: none;
+
   border-radius:0px;
   border-bottom-width: 2px;
   border-bottom-style: solid;
-  border-bottom-color: #FF6600;
-  color: #000 !important;
+  border-bottom-color: #4285f4;
+  color: #4285f4 !important;
   background-color: transparent !important;
 }
 
@@ -46,10 +45,12 @@ body {
   border-bottom-width: 2px;
   border-bottom-style: solid;
   border-bottom-color: gray;
+  color: black !important;
   background-color: transparent !important;
 }
 .nav-pills > li > a{
   border-radius:0px;
+  color: gray !important;
 }
 
 .nav-pills {
@@ -65,6 +66,7 @@ body {
 }
 .panel-body-no-padding {
   padding-bottom: 0px;
+  background-color: #fafbfc;
 }
 
 .panel-footer .pager {
@@ -122,7 +124,7 @@ body {
 }
 
 .dropdown-menu > li > a > i {
-  margin-top: 5px;
+  margin-top: 3px;
 }
 
 /* Custom page footer */
@@ -142,6 +144,24 @@ body {
   margin: 30px 0;
 }
 
+.container-body {
+  min-height: 800px;
+}
+
+.container-full-width {
+  width: 100%;
+}
+
+.container-full {
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+}
+
+.login-page {
+    width: 100%;
+    height: 100%;
+}
 /* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
