--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,10 +1,9 @@
 <div class="login-page">
-  <div class="row">
-    <div class="center-block" style="width: 320px;">
+    <div class="center-block">
       <div class="panel">
         <div class="panel-heading text-center">
-          <a style="text-decoration:none; font-family: Lobster; font-size: 30px; margin-left: 5px; color: #fff;">HopsWorks Beta
-            <img alt="" class="block-center img-rounded" style="margin-left:10px" width="30" src="images/hops.png">
+          <a class="login-badge">HopsWorks Beta
+            <img alt="" class="block-center img-rounded" width="30" src="images/hops.png">
           </a>
         </div>
         <div class="panel-body">
@@ -44,10 +43,8 @@
               </button>{{loginCtrl.errorMessage}}
           </div>
           <p></p>
-          <a class="btn btn-block btn-default" href="#!/register">Register</a>
+          <a class="btn btn-block btn-default mt-lg" href="#!/register">Register</a>
         </div>
       </div>
-
     </div>
-  </div>
 </div>
