--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,9 +1,9 @@
 <div class="login-page">
   <div class="row">
-    <div class="center-block" style="width: 320px;">
+    <div class="center-block">
       <div class="panel">
         <div class="panel-heading text-center">
-          <a style="text-decoration:none; font-family: Lobster; font-size: 30px; margin-left: 5px; color: #fff;">HopsWorks Beta
+          <a class="hopsworks-brand">HopsWorks Beta
             <img alt="" class="block-center img-rounded" style="margin-left:10px" width="30" src="images/hops.png">
           </a>
         </div>
@@ -47,7 +47,6 @@
           <a class="btn btn-block btn-default" href="#!/register">Register</a>
         </div>
       </div>
-
     </div>
   </div>
 </div>
