--- a/app/views/message.html
+++ b/app/views/message.html
@@ -1,1 +1,43 @@
 
+
+<div class="row">
+    <div class="col-md-3">
+      <ul class="nav nav-tabs">
+          <li class="active"><a href="#inbox" data-toggle="tab"><span class="glyphicon glyphicon-inbox">
+          </span> Inbox</a></li>
+          <li><a href="#trash" data-toggle="tab"><span class="glyphicon glyphicon-trash">
+          </span> Trash</a></li>
+      </ul>
+    </div>
+    <div class="col-md-9">
+      <div class="messages">
+            <img class="message-avatar pull-left" src="https://gravatar.com/avatar/8cda09d2549064e91b5b55008dc381dc?d=retro&s=50">
+            <div class="pull-left">
+               <span>From: </span>
+                    <span>Admin Admin &lt;admin@kth.se&gt;</span>
+                    <br>
+                    <span>Subject: </span>
+                    <span>Admin msg</span>
+                    <br>
+            </div>
+            <div class="message-view scroll">
+                <div></div>
+            </div>
+
+            <div class="message-box">
+                <p></p>
+                <div >
+                    <a class="pull-left">
+                        <img class="my-avatar img-rounded" src="https://gravatar.com/avatar/8cda09d2549064e91b5b55008dc381dc?d=retro&s=50">
+                    </a>
+                    <div class="message-box-body">
+                        <textarea  placeholder="Reply here... " class="form-control"></textarea>
+                    </div>
+                    <div class="pull-right">
+                            <a class="fa fa-paper-plane fa-lg"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
