--- a/app/views/main.html
+++ b/app/views/main.html
@@ -76,7 +76,7 @@
         <div class="panel-body panel-body-no-padding panal-body-border" style="">
           <form class="form">
             <div class="form-group">
-              <input type="text" class="form-control navbar-search" placeholder="Search projects ...">
+              <input type="text" class="form-control" placeholder="Search projects ...">
             </div>
           </form>
           <ul class="nav nav-pills" ng-init="activeAll = true; activeOwn = false; activeOwner = false; activeScientist = false;">
