--- a/app/styles/sidenav.css
+++ b/app/styles/sidenav.css
@@ -100,6 +100,12 @@
 .sidebar-nav li:nth-child(9):before {
     background-color: #35acdf;
 }
+.sidebar-nav li:nth-child(10):before {
+    background-color: #2d2366;
+}
+.sidebar-nav li:nth-child(11):before {
+    background-color: #35acdf;
+}
 .sidebar-nav li:hover:before,
 .sidebar-nav li.open:hover:before {
     width: 100%;
@@ -133,6 +139,7 @@
     font-size: 20px;
     line-height: 44px;
 }
+
 .sidebar-nav .dropdown-menu {
     position: relative;
     width: 100%;
@@ -144,18 +151,19 @@
     box-shadow: none;
 }
 
+.sidebar-nav > hr {
+  border-top: 1px solid rgba(255,255,255,0.125);
+}
 /*-------------------------------*/
 /*       Hamburger-Cross         */
 /*-------------------------------*/
 
 .hamburger {
   position: fixed;
-  top: 20px;
   z-index: 999;
   display: block;
-  width: 32px;
+  width: 25px;
   height: 32px;
-  margin-left: 15px;
   background: transparent;
   border: none;
 }
