--- a/app/styles/sidenav.css
+++ b/app/styles/sidenav.css
@@ -41,6 +41,46 @@
     margin-right: -220px;
 }
 
+#toggle-nav {
+  font-family: 'FontAwesome';
+  font-size: 24px;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  position: relative;
+  text-align: center;
+  width: 100%;
+  height: 0;
+  z-index: 98;
+}
+
+#toggle-nav:before {
+  background: #252525;
+  color: white;
+  content: "\f0c9"; /*"\f0c9"; "\f00d";*/
+  display: block;
+  padding: 7.425px;
+  position: fixed;
+  top: 50px;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  left: 0;
+  border-radius: 0px 5px 5px 0px;
+}
+
+/*@media screen and (max-width: 800px) {
+  #toggle-nav:before {
+    position: absolute;
+    top: -30px;
+    left: 0;
+    width: 100%;
+  }
+}*/
+
 .sidebar-nav {
     position: absolute;
     top: 0;
