--- a/app/styles/sidenav.css
+++ b/app/styles/sidenav.css
@@ -61,15 +61,15 @@
   color: white;
   content: "\f0c9"; /*"\f0c9"; "\f00d";*/
   display: block;
-  padding: 7.425px;
+  padding: 20px 15px 20px 15px;
   position: fixed;
-  top: 50px;
+  top: 54px;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  left: 0;
-  border-radius: 0px 5px 5px 0px;
+  left: 0px;
+  border-radius: 0px 10px 10px 0px;
 }
 
 /*@media screen and (max-width: 800px) {
