--- a/app/views/main.html
+++ b/app/views/main.html
@@ -101,8 +101,8 @@
         <div class="panel-footer clearfix">
           <nav aria-label="...">
             <ul class="pager">
-              <li class="previous"><a href="#"><span aria-hidden="true">&larr;</span> Previous</a></li>
-              <li class="next"><a href="#">Next <span aria-hidden="true">&rarr;</span></a></li>
+              <li class="previous"><a href=""><span aria-hidden="true">&larr;</span> Previous</a></li>
+              <li class="next"><a href="">Next <span aria-hidden="true">&rarr;</span></a></li>
             </ul>
           </nav>
         </div>
